--- a/views/index.html
+++ b/views/index.html
@@ -12,9 +12,18 @@
   <div class="container-fluid p-0">
     <div class="row g-0" style="min-height: 100vh;">
       <div class="col-3" id="chatlist">
-        <div>
-          <img src="ss" class="profilfoto" id="userprofilfoto">
-          <span id="username">aa</span>
+        <div class="d-flex align-items-center bg-warning">
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <img src="#" class="profilfoto" id="userprofilfoto">
+          </button>
+          <span id="username" class="p-2">aa</span>
+          <form action="/chat/addfriends">
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="addfriends with id"
+                aria-label="Example text with button addon" aria-describedby="button-addon1" name="friendsid">
+              <button class="btn btn-outline-danger" type="submit" id="button-addon1">Button</button>
+            </div>
+          </form>
         </div>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex flex-column" id="friendList">
           <template id="friendTemplate">
@@ -24,11 +33,41 @@
             </button>
           </template>
       </div>
-      <div class="col-9"></div>
+      <div class="col-9" style="max-height: 100vh; overflow: hidden;">
+        <iframe src="/chat/commit.html" class="w-100 h-100" id="commithtml"></iframe>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">change foto</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <form action="/chat/editfoto" method="get">
+          <div class="modal-body">
+            <label for="basic-url" class="form-label">Your vanity img URL</label>
+            <div class="input-group">
+              <span class="input-group-text" id="basic-addon3">https://foto.jpg</span>
+              <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4"
+                name="imgurl">
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary">Save changes</button>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
 </body>
-
 <script src="javascripts/index_script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="../javascripts/commit.js"></script>
 
 </html>
