--- a/views/index.html
+++ b/views/index.html
@@ -65,9 +65,9 @@
     </div>
   </div>
 </body>
-<script src="javascripts/index_script.js"></script>
+<script type="module" src="../javascripts/commit.js"></script>
+<script type="module" src="javascripts/index_script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-<script src="../javascripts/commit.js"></script>
 
 </html>
