--- a/views/commit.html
+++ b/views/commit.html
@@ -14,8 +14,8 @@
     <main></main>
     <footer class="bottomElement">
         <div class="input-group mb-3" id="submitbalk">
-            <input type="text" class="form-control" placeholder="comments........."
-                aria-label="Example text with button addon" aria-describedby="button-addon1" id="textbalk">
+            <textarea type="text" class="form-control" placeholder="comments........."
+                aria-label="Example text with button addon" aria-describedby="button-addon1" id="textbalk"></textarea>
             <button class="btn btn-outline-secondary" type="button" id="button-addon1">send</button>
         </div>
     </footer>
