--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,7 @@
             <div class="input-group">
               <input type="text" class="form-control" placeholder="addfriends with id"
                 aria-label="Example text with button addon" aria-describedby="button-addon1" name="friendsid">
-              <button class="btn btn-outline-danger" type="submit" id="button-addon1">Button</button>
+              <button class="btn btn-outline-danger" type="submit" id="button-addon1">SEND</button>
             </div>
           </form>
         </div>
